tests/derive_ui/skip_subcommand.stderr
error: `skip` cannot be used with `subcommand`
  --> tests/derive_ui/skip_subcommand.rs:17:24
   |
17 |     #[clap(subcommand, skip)]
   |                        ^^^^
